--- a/custom_templates/spawn_pending.html
+++ b/custom_templates/spawn_pending.html
@@ -1,8 +1,16 @@
 {% extends "templates/spawn_pending.html" %}
 
 {% block message %}
-{{ super() }}
-<p>Patience is a virtue.</p>
 
-<H1> HIIIIIIII </H1>
+<style>
+
+    .progress-bar{
+        background-color: #4BE8E0;
+        color: #4BE8E0;
+    }
+</style>
+{{ super() }}
+
+<p>Patience my young apprentice</p>
+
 {% endblock %}
