--- a/custom_templates/home.html
+++ b/custom_templates/home.html
@@ -3,6 +3,143 @@
 
 {% block main %}
 
-{{ super ()}}
+<style>
+    .home-title-div {
+
+        display:flex;
+        flex-direction:column;
+        align-items: center;
+        
+        background: linear-gradient(120.16deg, #9E8DFC 2.5%, #97FBF6 100%);
+        padding:2rem;
+
+        margin-bottom:2rem;
+    }
+
+    .home-title-container {
+        display:flex;
+        flex-direction:column;
+        align-items: center;
+        color:#1F2123;
+        text-align: center;
+        width:55%;
+    }
+    .env-container {
+        display:flex;
+        justify-content: center;
+    }
+
+    .env {
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+        justify-content: center;
+        width: 40%;
+        margin-top:8rem;
+    }
+
+    #start, #stop {
+        width: 100%;
+        margin:10px;
+    }
+
+    .home-icon {
+        margin-bottom:0;
+    }
+
+
+
+</style>
+
+<div class="home-title-div">
+    <div class="home-icon-container">
+        <img class="home-icon" src="https://julie-assets.s3.eu-west-3.amazonaws.com/Working+1.svg" alt=""/>
+    </div>
+    <div class="home-title-container">
+        <h1 class="home-title">Start your server</h1>
+        <h5>Click on <b>"Launch Environment"</b> to choose and launch a Data Science environment</h5>
+        <h5>When you're done with your work, you can click on <b>"Stop Environment"</b>, your notebooks and data will be saved if you launch a new environment later on.</h5>
+    </div>
+</div>
+
+<div class="container">
+    <div class="row env-container">
+      <div class="text-center env">
+        {% if default_server.active %}
+          <a  id="stop" role="button" class="btn btn-lg btn-danger">
+            Stop Environment
+          </a>
+        {% endif %}
+        <a  id="start"  role="button" class="btn btn-lg btn-primary" href="{{ url }}">
+        {% if not default_server.active %}Launch{% endif %}
+        Environment
+        </a>
+      </div>
+    </div>
+    {% if allow_named_servers %}
+    <h2>
+    Named Servers
+    </h2>
+  
+    <p>
+    In addition to your default server,
+    you may have additional {% if named_server_limit_per_user > 0 %}{{ named_server_limit_per_user }} {% endif %}server(s) with names.
+    This allows you to have more than one server running at the same time.
+    </p>
+  
+    {% set named_spawners = user.all_spawners(include_default=False)|list %}
+  
+    <table class="server-table table table-striped">
+      <thead>
+        <tr>
+          <th>Server name</th>
+          <th>URL</th>
+          <th>Last activity</th>
+          <th>Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr class="home-server-row add-server-row">
+          <td colspan="4">
+            <input class="new-server-name" placeholder="Name your server">
+            <a role="button" class="new-server-btn" class="add-server btn btn-xs btn-primary">
+              Add New Server
+            </a>
+          </td>
+        </tr>
+        {% for spawner in named_spawners %}
+        <tr class="home-server-row" data-server-name="{{ spawner.name }}">
+          {# name #}
+          <td>{{ spawner.name }}</td>
+          {# url #}
+          <td>
+            <a class="server-link {% if not spawner.ready %}hidden{% endif %}" href="{{ user.server_url(spawner.name) }}">
+              {{ user.server_url(spawner.name) }}
+            </a>
+          </td>
+          {# activity #}
+          <td class='time-col'>
+            {% if spawner.last_activity %}
+            {{ spawner.last_activity.isoformat() + 'Z' }}
+            {% else %}
+            Never
+            {% endif %}
+          </td>
+          {# actions #}
+          <td>
+            <a role="button" class="stop-server btn btn-xs btn-danger{% if not spawner.active %} hidden{% endif %}" id="stop-{{ spawner.name }}">stop</a>
+            <a role="button" class="start-server btn btn-xs btn-primary {% if spawner.active %} hidden{% endif %}" id="start-{{ spawner.name }}"
+            href="{{ base_url }}spawn/{{ user.name }}/{{ spawner.name }}"
+            >
+              start
+            </a>
+            <a role="button" class="delete-server btn btn-xs btn-danger{% if spawner.active %} hidden{% endif %}" id="delete-{{ spawner.name }}">delete</a>
+          </td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+    {% endif %}
+  </div>
 
 {% endblock %}
