--- a/custom_templates/page.html
+++ b/custom_templates/page.html
@@ -279,6 +279,7 @@
             position: fixed;
             bottom: 0;
             width: 100%;
+            font-size:10px;
         }
 
         
