--- a/custom_templates/spawn.html
+++ b/custom_templates/spawn.html
@@ -3,9 +3,29 @@
 
 {% block main %}
 <style>
-    .input-group div input[type=radio]:checked + label:after {
+    .form-control div input[type=radio]:checked + label:after {
     border-color: #4BE8E0;
     background: #4BE8E0;
+    }
+
+    .input-group {
+        display:flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        border-radius: 8px;
+        padding: 4rem;
+        background: #E9FFF6;
+        border: 1px solid #B4FFE4;
+    }
+
+    input[type='radio'] {
+        -webkit-appearance: none;
+    }
+
+    input[type='radio']:checked {
+        background: url("https://julie-assets.s3.eu-west-3.amazonaws.com/Vector+7.svg");
+        background-repeat: no-repeat;
     }
 </style>
 
