fix bug in spawn

--- a/custom_templates/spawn.html
+++ b/custom_templates/spawn.html
@@ -33,7 +33,7 @@
         height: 15px;
     }
 
-    .welcome-login-div {
+    .workspace-pres-div {
 
         display:flex;
         flex-direction:column;
@@ -43,7 +43,8 @@
         padding:2rem;
     }
 
-        .welcome-login-container {
+        
+    .workspace-pres-container {
         display:flex;
         flex-direction:column;
         align-items: center;
@@ -52,7 +53,7 @@
         width:55%;
     }
 
-        .login-icon {
+    .workspace-pres-icon {
         width: 10rem;
     }
 </style>
@@ -63,7 +64,7 @@
     <div class="workspace-pres-container">
         <img class="workspace-pres-icon" src="https://julie-assets.s3.eu-west-3.amazonaws.com/Working+(male+and+female)+1.svg" alt=""/>
     </div>
-    <div class="workspace-pres-container">
+    <div class="workspace-pres-title-container">
         <h1 class="workspace-pres-title">Choose your Environment!</h1>
         <h5>Select the Workspace you need! Choose wisely ;)</h5>
     </div>
