--- a/custom_templates/spawn.html
+++ b/custom_templates/spawn.html
@@ -58,7 +58,6 @@
     }
 </style>
 
-{% block heading %}
 <div class="workspace-pres-div">
 
     <div class="workspace-pres-container">
@@ -70,7 +69,23 @@
     </div>
 </div>
 
-{% endblock %}
+<div class="container">
 
+    <div class="row col-sm-offset-2 col-sm-8">
+      {% if for_user and user.name != for_user.name -%}
+        <p>Spawning server for {{ for_user.name }}</p>
+      {% endif -%}
+      {% if error_message -%}
+        <p class="spawn-error-msg text-danger">
+          Error: {{error_message}}
+        </p>
+      {% endif %}
+      <form enctype="multipart/form-data" id="spawn_form" action="{{url}}" method="post" role="form">
+        {{spawner_options_form | safe}}
+        <br>
+        <input type="submit" value="Start" class="btn btn-jupyter form-control">
+      </form>
+    </div>
+  </div>
 
 {% endblock %}
